add post and basic design

--- a/social_media/package.json
+++ b/social_media/package.json
@@ -12,9 +12,11 @@
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.47",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
