--- a/social_media/package.json
+++ b/social_media/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.35.1",
+    "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
